# time_filling

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Untitled_final.xcf  display.py  env.bash  screenshot1.xcf  status.md
Cli/: CMakeLists.txt  time_filling.cpp
Gui/: CMakeLists.txt  controls.cpp  controls.hpp  gui.cpp  gui.hpp  time_filling.cpp
Pathfinder/: CMakeLists.txt  hexagon.cpp  hexagon.hpp  shapes.cpp  shapes.hpp  shapes.ipp  utils.hpp  utils.tpp
mk2/: .hexagon.cpp.swp  .hexagon.hpp.swp  README.md  hexagon.cpp  hexagon.hpp  hexagon_ops.cpp  hexagon_ops.hpp  itinerary.cpp  main.cpp  overview.md  point.cpp  point.hpp  rng.cpp  rng.hpp  status.md  time_filling.cpp  time_filling.hpp  time_filling.l.hpp  utils.hpp
mk2/src/: hexagon.cpp  hexagon.hpp  hexagon_ops.cpp  hexagon_ops.hpp  itinerary.cpp  itinerary.hpp  point.cpp  point.hpp  point.tpp  rng.cpp  rng.hpp  time_filling.cpp  time_filling.hpp
mk2/test/: coord1.cpp  final?.cpp  hexagon1.cpp  level1_neigh.cpp  simple_itinerary.cpp  simple_path1.cpp  simple_path2.cpp  simple_path3.cpp  simple_path4.cpp  simple_path_rec1.cpp
mk3/: Cargo.toml  README.md
mk3/src/: main.rs  tifl.js  tifl.rs
src/: controls.cpp  controls.hpp  gui.cpp  gui.hpp  hexagon.cpp  hexagon.hpp  time_filling.cpp
web/: gen_json.py  gen_svg.py  json_pos.txt  svg_pos.txt  time_filling.html  time_filling.js
